cleanup: printer.cfg

--- a/firmware/config/klipper/printer.cfg
+++ b/firmware/config/klipper/printer.cfg
@@ -295,13 +295,13 @@ algorithm: bicubic
 
 [pause_resume]
 # recover_velocity: 50.0
-#   When capture/restore is enabled, the speed at which to return to
-#   the captured position (in mm/s). Default is 50.0 mm/s.
+#   When capture/restore is enabled, speed at which to return to the captured position (mm/s).
+#   Default is 50.0 mm/s.
 
 [filament_motion_sensor filament_sensor]
 detection_length: 7
-#   The minimum length of filament pulled through the sensor to trigger
-#   a state change on the switch_pin. Default 7 mm.
+#   The minimum length of filament pulled through the sensor to trigger a state change on the
+#   switch_pin. Default 7 mm.
 extruder: extruder # Name of extruder section this sensor is associated with. Required.
 pause_on_runout: True
 switch_pin: PA4 # Change to switch_pin name according to your motherboard
@@ -316,16 +316,18 @@ runout_gcode:
   G1 E-20 F2400
   G1 E-600 F1600
   G90
+#   A list of G-Code commands to execute after a filament runout is detected. See
+#   docs/Command_Templates.md for G-Code format. If pause_on_runout is set to True this G-Code
+#   will run after the PAUSE is complete. The default is not to run any G-Code commands.
 insert_gcode:
   G4 P90000
   G91
   G1 E60 F300
   G4 P8000
   resume
-#   A list of G-Code commands to execute after a filament insert is
-#   detected. See docs/Command_Templates.md for G-Code format. The
-#   default is not to run any G-Code commands, which disables insert
-#   detection.
+#   A list of G-Code commands to execute after a filament insert is detected. See
+#   docs/Command_Templates.md for G-Code format. The default is not to run any G-Code commands,
+#   which disables insert detection.
 # event_delay:
 # pause_delay:
 
