moonraker: update config

--- a/firmware/config/moonraker/moonraker.conf
+++ b/firmware/config/moonraker/moonraker.conf
@@ -1,31 +1,192 @@
+##########################################################################
+# moonraker.conf
+# https://moonraker.readthedocs.io/en/latest/configuration.html
+# Host: Raspberry Pi 4b
+# OS:   Octopi
+########################################################################## 
+# Changelog:
+# 08/17/25:
+#   - 
+##########################################################################
+
+
+##########################################################################
+# [server]
+#   Previously the [server] section contained ssl_certificate_path and
+#   ssl_key_path options. These options are now deprecated, as both
+#   locations are determined by the data path and alias configured on the
+#   command line, ie <data_file_path>/certs/<alias>.cert. By default the
+#   certificate path resolves to $HOME/moonraker_data/certs/moonraker.cert
+#   and the key path resolves to $HOME/moonraker_data/certs/moonraker.key.
+#   Both files may be symbolic links.
+##########################################################################
 [server]
 host: 0.0.0.0
-port: 7125
+#   The host address in which to bind the HTTP server.  Default is to bind to all ipv4 interfaces.
+#   If set to "all" the server will bind to all ipv4 an ipv6 interfaces.
+# port: 7125
+#   The port the HTTP server will listen on.  Default is 7125
+# ssl_port: 7130
+#   The port to listen on for SSL (HTTPS) connections.  Note that the HTTPS server will only be
+#   started of the certificate and key options outlined below are provided.  The default is 7130.
 klippy_uds_address: /home/shaggy/printer_data/comms/klippy.sock
+#   The address of Unix Domain Socket used to communicate with Klippy. This option accepts Jinja2
+#   Templates, where the configured data path is passed to the template context.
+#   Default is /tmp/klippy_uds.
+# route_prefix:
+#   A prefix prepended to the path for each HTTP endpoint.  For example if the route_prefix is
+#   set to moonraker/printer1, then the server info endpoint is available at:
+#     http://myprinter.local/moonraker/printer1/server/info
+# max_upload_size: 1024
+#   The maximum size allowed for a file upload (in MiB).  Default is 1024 MiB.
+# max_websocket_connections:
+#   The maximum number of concurrently open websocket connections. The default is 50.
+
+##########################################################################
+# [authorization]
+#   Provides configuration for Moonraker's authorization module.
+##########################################################################
 
 [authorization]
 trusted_clients:
-    192.168.0.0/16
-    10.0.0.0/8
+    192.168.83.0/24
+    10.9.2.0/32
     127.0.0.0/8
-    169.254.0.0/16
-    172.16.0.0/12
-    192.168.0.0/16
-    FC00::/7
-    FE80::/10
-    ::1/128
+#   A list of newline separated ip addresses, ip ranges, or fully qualified
+#   domain names that are trusted. Trusted clients are given full access to
+#   the API.  Both IPv4 and IPv6 addresses and ranges are supported. Ranges
+#   must be expressed in CIDR notation (see http://ip.sb/cidr for more info).
+#   For example, an entry of 192.168.1.0/24 will authorize IPs in the range of
+#   192.168.1.1 - 192.168.1.254.  Note that when specifying IPv4 ranges the
+#   last segment of the ip address must be 0. The default is no IPs or
+#   domains are trusted.
 cors_domains:
     *.lan
     *.local
+    *.home
     *://localhost
     *://localhost:*
     *://my.mainsail.xyz
     *://app.fluidd.xyz
+#   Enables CORS for the specified domains.  One may specify * if they wish
+#   to allow all domains, however this should be an option reserved for
+#   client developers and not used in production.  A * can also be used
+#   to specify a wildcard that matches several domains.  For example:
+#     *.local
+#     http://*.my-domain.com
+#     *.my-domain.com:*
+#   Are all valid entries.  However, a wildcard may not be specified in
+#   the top level domain:
+#      http://my-printer.*
+#   The above example will be rejected.
+#   When CORS is enabled by adding an entry to this option, all origins
+#   matching the "trusted_clients" option will have CORS headers set as
+#   well.  If this option is not specified then CORS is disabled.
 
 [octoprint_compat]
+# enable_ufp: True
+#   When set to True the octoprint_compat module will report that the UFP
+#   plugin is available.  If the installed version of Cura supports UFP
+#   files will be uploaded in UFP format.  When set to False Cura will
+#   upload files in .gcode format.  This setting has no impact on other
+#   slicers.  The default is True.
+
+# flip_h: False
+#   Set the webcam horizontal flip.  The default is False.
+# flip_v: False
+#   Set the webcam vertical flip.  The default is False.
+# rotate_90: False
+#   Set the webcam rotation by 90 degrees.  The default is False.
+# stream_url: /webcam/?action=stream
+#   The URL to use for streaming the webcam.  It can be set to an absolute
+#   URL if needed. In order to get the webcam to work in Cura through
+#   an OctoPrint connection, you can set this value to
+#   http://<octoprint ip>/webcam/?action=stream.  The default value is
+#   /webcam/?action=stream.
+# webcam_enabled: True
+#   Enables the webcam.  The default is True.
 
 [history]
 
 [update_manager]
 channel: dev
 refresh_interval: 168
+
+# [file_manager]
+# moonraker.conf
+# queue_gcode_uploads: False
+#   When set to True the file manager will add uploads to the job_queue when the
+#  `start_print` flag has been set.  The default if False.
+# check_klipper_config_path: True
+#   By default Moonraker will validate that Klipper's configuration file exists within the data
+#   path's "config" folder, as this is a requirement for Moonraker to write to the configuration.
+#   If this validation check fails Moonraker will warn the user. Installations that do not wish
+#   to use Moonraker to manage Klipper's configuration may set this option to False to bypass
+#   the location check.  The default is True.
+# enable_object_processing: False
+#   When set to True gcode files will be run through a "preprocessor" during metadata extraction
+#   if object tags are detected.  This preprocessor replaces object tags with G-Code commands
+#   compatible with Klipper's "cancel object" functionality.  Note that this process is file I/O
+#   intensive, it is not recommended for usage on low resource SBCs such as a Pi Zero.
+#   The default is False.
+# file_system_observer: inotify
+#   The observer used to monitor file system changes.  May be inotify or none. When set to none
+#   file system observation is disabled.  The default is inotify.
+# enable_observer_warnings: True
+#   When set to True Moonraker will generate warnings when an observer encounters an error.
+#   This may be useful to determine if the observer malfunctioning. The default is True.
+# enable_config_write_access: True
+#   When enabled the configuration folder is writable over the API.  Some installations, such
+#   as those in public areas, may wish to lock out configuration changes.  The default is True.
+
+##########################################################################
+# [webcam]
+#   Webcams may be configured directly through front-ends and added to the
+#   database, however it is possible for users to configure one or more
+#   webcams in moonraker.conf. If a webcam is configured in moonraker.conf
+#   it takes precedent over a webcam in the database by the same name. The
+#   options available may not apply to all front ends, refer to your front
+#   end's documentation for details on camera configuration.
+##########################################################################
+
+# [webcam my_camera_name]
+# location: printer
+#   A description of the webcam location, ie: what the webcam is observing.
+#   The default is "printer".
+# icon: mdiPrinter3d
+#   A name of the icon to use for the camera.  See the tip following this
+#   example for known values.  The default is mdiWebcam.
+# enabled: True
+#   An optional boolean value to indicate if this webcam should be enabled.
+#   Default is True.
+# service: mjpegstreamer
+#   The name of the application or service hosting the webcam stream.  Front-
+#   ends may use this configuration to determine how to connect to the service
+#   and interpret its stream.  See the tip following this example for
+#   currently known values.  The default is "mjpegstreamer".
+# target_fps: 15
+#   An integer value specifying the target framerate.  The default is 15 fps.
+# target_fps_idle: 5
+#   An integer value specifying the target framerate when the printer is idle.
+#   The default is 5 fps.
+# stream_url:
+#   The url for the camera stream request.  This may be a full url or a
+#   relative path (ie: /webcam?action=stream) if the stream is served on the
+#   same host as Moonraker at port 80.  This parameter must be provided.
+# snapshot_url:
+#   The url for the camera snapshot request.  This may be a full url or a
+#   relative path (ie: /webcam?action=stream) if the stream is served on the
+#   same host as Moonraker at port 80.  The default is an empty url.
+# flip_horizontal: False
+#   A boolean value indicating whether the stream should be flipped
+#   horizontally.  The default is false.
+# flip_vertical: False
+#   A boolean value indicating whether the stream should be flipped
+#   vertically.  The default is false.
+# rotation: 0
+#   An integer value indicating the amount of clockwise rotation to apply
+#   to the stream.  May be 0, 90, 180, or 270.  The default is 0.
+# aspect_ratio: 4:3
+#   The aspect ratio to display for the camera.  Note that this option
+#   is specific to certain services, otherwise it is ignored.
+#   The default is 4:3.
