--- a/firmware/config/klipper/printer.cfg
+++ b/firmware/config/klipper/printer.cfg
@@ -18,14 +18,19 @@
 
 [mcu]
 serial: /dev/serial/by-id/usb-1a86_USB_Serial-if00-port0
+#   The serial port to connect to the MCU
+baud: 250000
+# Baud rate to use. Default 250000.
 restart_method: command
-
-[printer]
-kinematics: cartesian
-max_velocity: 300
-max_accel: 3000
-max_z_velocity: 5
-max_z_accel: 100
+#   This controls the mechanism the host will use to reset the micro-controller.
+#   The choices are 'arduino', 'cheetah', 'rpi_usb', 'command'. The 'arduino'
+#   method (toggle DTR) is common on Arduino boards and clones. The 'cheetah'
+#   method is a special method needed for some Fysetc Cheetah boards. The
+#   'rpi_usb' method is useful on Raspberry Pi boards with micro-controllers
+#   powered over USB - it briefly disables power to all USB ports to accomplish
+#   a micro-controller reset. The 'command' method involves sending a Klipper command
+#   to the micro-controller so that it can reset itself. The default is 'arduino'
+#   if the micro-controller communicates over a serial port, 'command' otherwise.
 
 [virtual_sdcard]
 path: ~/printer_data/gcodes
@@ -42,6 +47,19 @@ click_pin: ^!PB2
 
 [fan]
 pin: PA0
+
+[printer]
+kinematics: cartesian
+max_velocity: 300
+#   Maximum velocity (in mm/s) of the toolhead (relative to the print). Can be changed
+#   at runtime using the SET_VELOCITY_LIMIT command. This parameter must be specified.
+max_accel: 3000
+#   Maximum acceleration (in mm/s^2) of the toolhead (relative to the print). Although
+#   this parameter is described as a "maximum" acceleration, in practice most moves that
+#   accelerate or decelerate will do so at the rate specified here. The value specified
+#   here may be changed at runtime using the SET_VELOCITY_LIMIT command. Must be specified.
+max_z_velocity: 5
+max_z_accel: 100
 
 [stepper_x]
 step_pin: PC2
@@ -74,15 +92,20 @@ rotation_distance: 4
 endstop_pin: ^PA7
 position_max: 300
 position_endstop: 0.0
+#    If using "probe:z_virtual_endstop" then do not define a position_endstop in the
+#    stepper_z section.
 
 [extruder]
 step_pin: PB4
 dir_pin: PB3
 enable_pin: !PC3
 microsteps: 16
-rotation_distance: 32.342
+rotation_distance: 7.7 # Was 32.342
 # full_steps_per_rotation:
 # gear_ratio:
+#   See the "stepper" section for a description of the above parameters. If none of the
+#   above parameters are specified then no stepper will be associated with the nozzle hotend
+#   (though a SYNC_EXTRUDER_MOTION command may associate one at run-time).
 nozzle_diameter: 0.400
 filament_diameter: 1.750
 max_extrude_only_distance: 100.0
@@ -103,7 +126,7 @@ max_extrude_only_distance: 100.0
 #   retractions and extrude-only moves. These settings do not have any impact on normal
 #   printing moves. If not specified then they are calculated to match the limit an XY
 #   printing move with a cross section of 4.0*nozzle_diameter^2 would have.
-# pressure_advance: 0.0
+pressure_advance: 0.0 # <-----------NEED TO TUNE --------->
 #   The amount of raw filament to push into the extruder during extruder acceleration.
 #   An equal amount of filament is retracted during deceleration. It is measured in millimeters
 #   per millimeter/second. The default is 0, which disables pressure advance.
@@ -115,7 +138,7 @@ max_extrude_only_distance: 100.0
 # The remaining variables describe the [extruder] heater. #
 ###########################################################
 heater_pin: PA1 # PWM output pin controlling the heater. Required
-sensor_type: EPCOS 100K B57560G104F
+sensor_type: PT1000 # Was: EPCOS 100K B57560G104F
 #   Type of sensor - common thermistors are "EPCOS 100K B57560G104F", "ATC Semitec 104GT-2",
 #   "ATC Semitec 104NT-4-R025H42G", "Generic 3950","Honeywell 100K 135-104LAG-J01",
 #   "NTC 100K MGB18-104F39050L32", "SliceEngineering 450", and "TDK NTCG104LH104JT1". See the
@@ -144,7 +167,7 @@ max_temp: 260
 #   The value 1.0 allows the pin to be set fully enabled for extended periods, while a value of 0.5
 #   would allow the pin to be enabled for no more than half the time. This setting may be used to
 #   limit the total power output (over extended periods) to the heater. Default is 1.0
-# pullup_resistor: 4700
+pullup_resistor: 4700
 #   The resistance (ohms) of the pullup attached to the thermistor. Only valid when the sensor is
 #   a thermistor. Default is 4700
 # smooth_time: 1.0
@@ -330,6 +353,125 @@ insert_gcode:
 #   which disables insert detection.
 # event_delay:
 # pause_delay:
+
+######################################################################
+# Resonance Compensation / Input Shaping
+######################################################################
+
+#[input_shaper]
+#shaper_freq_x: 0
+#   A frequency (in Hz) of the input shaper for X axis. This is
+#   usually a resonance frequency of X axis that the input shaper
+#   should suppress. For more complex shapers, like 2- and 3-hump EI
+#   input shapers, this parameter can be set from different
+#   considerations. The default value is 0, which disables input
+#   shaping for X axis.
+#shaper_freq_y: 0
+#   A frequency (in Hz) of the input shaper for Y axis. This is
+#   usually a resonance frequency of Y axis that the input shaper
+#   should suppress. For more complex shapers, like 2- and 3-hump EI
+#   input shapers, this parameter can be set from different
+#   considerations. The default value is 0, which disables input
+#   shaping for Y axis.
+#shaper_type: mzv
+#   A type of the input shaper to use for both X and Y axes. Supported
+#   shapers are zv, mzv, zvd, ei, 2hump_ei, and 3hump_ei. The default
+#   is mzv input shaper.
+#shaper_type_x:
+#shaper_type_y:
+#   If shaper_type is not set, these two parameters can be used to
+#   configure different input shapers for X and Y axes. The same
+#   values are supported as for shaper_type parameter.
+#damping_ratio_x: 0.1
+#damping_ratio_y: 0.1
+#   Damping ratios of vibrations of X and Y axes used by input shapers
+#   to improve vibration suppression. Default value is 0.1 which is a
+#   good all-round value for most printers. In most circumstances this
+#   parameter requires no tuning and should not be changed.
+
+#    Accelerometer
+#[adxl345]
+#cs_pin:
+#   The SPI enable pin for the sensor. This parameter must be provided.
+#spi_speed: 5000000
+#   The SPI speed (in hz) to use when communicating with the chip.
+#   The default is 5000000.
+#spi_bus:
+#spi_software_sclk_pin:
+#spi_software_mosi_pin:
+#spi_software_miso_pin:
+#   See the "common SPI settings" section for a description of the
+#   above parameters.
+#axes_map: x, y, z
+#   The accelerometer axis for each of the printer's X, Y, and Z axes.
+#   This may be useful if the accelerometer is mounted in an
+#   orientation that does not match the printer orientation. For
+#   example, one could set this to "y, x, z" to swap the X and Y axes.
+#   It is also possible to negate an axis if the accelerometer
+#   direction is reversed (eg, "x, z, -y"). The default is "x, y, z".
+#rate: 3200
+#   Output data rate for ADXL345. ADXL345 supports the following data
+#   rates: 3200, 1600, 800, 400, 200, 100, 50, and 25. Note that it is
+#   not recommended to change this rate from the default 3200, and
+#   rates below 800 will considerably affect the quality of resonance
+#   measurements.
+
+#[resonance_tester]
+#probe_points:
+#   A list of X, Y, Z coordinates of points (one point per line) to test
+#   resonances at. At least one point is required. Make sure that all
+#   points with some safety margin in XY plane (~a few centimeters)
+#   are reachable by the toolhead.
+#accel_chip:
+#   A name of the accelerometer chip to use for measurements. If
+#   adxl345 chip was defined without an explicit name, this parameter
+#   can simply reference it as "accel_chip: adxl345", otherwise an
+#   explicit name must be supplied as well, e.g. "accel_chip: adxl345
+#   my_chip_name". Either this, or the next two parameters must be
+#   set.
+#accel_chip_x:
+#accel_chip_y:
+#   Names of the accelerometer chips to use for measurements for each
+#   of the axis. Can be useful, for instance, on bed slinger printer,
+#   if two separate accelerometers are mounted on the bed (for Y axis)
+#   and on the toolhead (for X axis). These parameters have the same
+#   format as 'accel_chip' parameter. Only 'accel_chip' or these two
+#   parameters must be provided.
+#max_smoothing:
+#   Maximum input shaper smoothing to allow for each axis during shaper
+#   auto-calibration (with 'SHAPER_CALIBRATE' command). By default no
+#   maximum smoothing is specified. Refer to Measuring_Resonances guide
+#   for more details on using this feature.
+#move_speed: 50
+#   The speed (in mm/s) to move the toolhead to and between test points
+#   during the calibration. The default is 50.
+#min_freq: 5
+#   Minimum frequency to test for resonances. The default is 5 Hz.
+#max_freq: 133.33
+#   Maximum frequency to test for resonances. The default is 133.33 Hz.
+#accel_per_hz: 60
+#   This parameter is used to determine which acceleration to use to
+#   test a specific frequency: accel = accel_per_hz * freq. Higher the
+#   value, the higher is the energy of the oscillations. Can be set to
+#   a lower than the default value if the resonances get too strong on
+#   the printer. However, lower values make measurements of
+#   high-frequency resonances less precise. The default value is 75
+#   (mm/sec).
+#hz_per_sec: 1
+#   Determines the speed of the test. When testing all frequencies in
+#   range [min_freq, max_freq], each second the frequency increases by
+#   hz_per_sec. Small values make the test slow, and the large values
+#   will decrease the precision of the test. The default value is 1.0
+#   (Hz/sec == sec^-2).
+#sweeping_accel: 400
+#   An acceleration of slow sweeping moves. The default is 400 mm/sec^2.
+#sweeping_period: 1.2
+#   A period of slow sweeping moves. Setting this parameter to 0
+#   disables slow sweeping moves. Avoid setting it to a too small
+#   non-zero value in order to not poison the measurements.
+#   The default is 1.2 sec which is a good all-round choice.
+
+
 
 ######################################################################
 # Macros
