klipper: BLTouch set z-offset to 0 as negative offset not allowed, use probe calibrate

--- a/firmware/config/klipper/printer.cfg
+++ b/firmware/config/klipper/printer.cfg
@@ -223,7 +223,7 @@ sensor_pin: ^PB1
 control_pin: PB0
 x_offset: -41.9
 y_offset: -4.9
-z_offset: -1.92
+z_offset: 0 # must be postiive number but we have negaive Z offset, run probe calibrate
 speed: 5.0
 sample_retract_dist: 8.0
 samples: 2
