klipper: printer.cfg comment out errored macro UNLOAD gcode, causes invalid config

--- a/firmware/config/klipper/printer.cfg
+++ b/firmware/config/klipper/printer.cfg
@@ -569,7 +569,7 @@ gcode:
   CANCEL_PRINT_BASE
 
 [gcode_macro UNLOAD]
-default_parameter_E: -320
+# default_parameter_E: -320
 gcode:
     G91
     G1 E5.0 F1200
