--- a/firmware/config/klipper/printer.cfg
+++ b/firmware/config/klipper/printer.cfg
@@ -16,6 +16,8 @@
 
 # See docs/Config_Reference.md for a description of parameters.
 
+[include bigtreetech-adxl345-v2.0.cfg]
+
 [mcu]
 serial: /dev/serial/by-id/usb-1a86_USB_Serial-if00-port0
 #   The serial port to connect to the MCU
