--- a/firmware/config/klipper/bigtreetech-adxl345-v2.0.cfg
+++ b/firmware/config/klipper/bigtreetech-adxl345-v2.0.cfg
@@ -6,7 +6,7 @@
 # See docs/Config_Reference.md for a description of parameters.
 
 [mcu btt_adxl345]
-serial: /dev/serial/by-id/usb-Klipper_rp2040_btt_acc-if00
+serial: /dev/serial/by-id/usb-Klipper_rp2040_5044506128C0281C-if00
 
 [adxl345]
 cs_pin: btt_adxl345:gpio9
@@ -14,7 +14,7 @@ cs_pin: btt_adxl345:gpio9
 spi_software_sclk_pin: btt_adxl345:gpio10
 spi_software_mosi_pin: btt_adxl345:gpio11
 spi_software_miso_pin: btt_adxl345:gpio8
-axes_map: -x,-y,-z
+axes_map: -x,-z,y #x,y,z
 
 [resonance_tester]
 probe_points: 100, 100, 20
