klipper: rough final config changes,  PID tuning, BLT offsets, rough bed level

--- a/firmware/config/klipper/printer.cfg
+++ b/firmware/config/klipper/printer.cfg
@@ -16,8 +16,6 @@
 
 # See docs/Config_Reference.md for a description of parameters.
 
-[include bigtreetech-adxl345-v2.0.cfg]
-
 [mcu]
 serial: /dev/serial/by-id/usb-1a86_USB_Serial-if00-port0
 #   The serial port to connect to the MCU
@@ -46,6 +44,14 @@ sclk_pin: PB13
 sid_pin: PB15
 encoder_pins: ^PB14, ^PB10
 click_pin: ^!PB2
+
+[output_pin BEEPER_Pin]
+pin: PC6
+pwm: True
+value: 0
+shutdown_value: 0
+cycle_time: 0.001
+scale: 1
 
 [fan]
 pin: PA0
@@ -92,8 +98,10 @@ enable_pin: !PC3
 microsteps: 16
 rotation_distance: 4
 endstop_pin: ^PA7
+position_min: -5 # Use negative value here for BLTouch probe negative z_offset
 position_max: 300
-position_endstop: 0.0
+endstop_pin: probe:z_virtual_endstop
+# position_endstop: 0.0
 #    If using "probe:z_virtual_endstop" then do not define a position_endstop in the
 #    stepper_z section.
 
@@ -110,7 +118,7 @@ rotation_distance: 7.7 # Was 32.342
 #   (though a SYNC_EXTRUDER_MOTION command may associate one at run-time).
 nozzle_diameter: 0.400
 filament_diameter: 1.750
-max_extrude_only_distance: 100.0
+max_extrude_only_distance: 1000.0
 #   Maximum length (in mm of raw filament) that a retraction or extrude-only move may have.
 #   If a retraction or extrude-only move requests a distance greater than this value it will
 #   cause an error to be returned. The default is 50mm.
@@ -146,10 +154,10 @@ sensor_type: PT1000 # Was: EPCOS 100K B57560G104F
 #   "NTC 100K MGB18-104F39050L32", "SliceEngineering 450", and "TDK NTCG104LH104JT1". See the
 #   "Temperature sensors" section for other sensors. Required
 sensor_pin: PC5 # Analog input pin connected to the sensor. Required
-control: pid    # Control algorithm (either pid or watermark). Required
-pid_kp: 19.72
-pid_ki: 1.4
-pid_kd: 69.54
+#control: pid    # Control algorithm (either pid or watermark). Required
+#pid_kp: 19.72
+#pid_ki: 1.4
+#pid_kd: 69.54
 #   The proportional (pid_Kp), integral (pid_Ki), and derivative (pid_Kd) settings for the PID
 #   feedback control system. Klipper evaluates the PID settings with the following general formula:
 #     heater_pwm = (Kp*error + Ki*integral(error) - Kd*derivative(error)) / 255
@@ -158,7 +166,7 @@ pid_kd: 69.54
 #   PID_CALIBRATE command to obtain these parameters. The pid_Kp, pid_Ki, and pid_Kd parameters must
 #   be provided for PID heaters.
 min_temp: 0
-max_temp: 260
+max_temp: 300
 #   The maximum range of valid temperatures (in Celsius) that the heater must remain within.
 #   This controls a safety feature implemented in the micro-controller code - should the measured
 #   temperature ever fall outside this range then the micro-controller will go into a shutdown
@@ -193,16 +201,26 @@ pullup_resistor: 4700
 heater_pin: PA2
 sensor_type: EPCOS 100K B57560G104F
 sensor_pin: PC4
-control: pid
-pid_kp: 66.429
-pid_ki: 1.197
-pid_kd: 921.707
+#control: pid
+#pid_kp: 66.429
+#pid_ki: 1.197
+#pid_kd: 921.707
 min_temp: 0
 max_temp: 135
 
 ######################################################################
-# Homing / BL touch / Bed Mesh
+# BLTouch / Homing
 ######################################################################
+
+[bltouch]
+sensor_pin: ^PB1
+control_pin: PB0
+x_offset: -45.4
+y_offset: -8.2
+#z_offset: 0 # must be postiive number but we have negaive Z offset, run probe calibrate
+speed: 5.0
+sample_retract_dist: 8.0
+samples: 2
 
 [safe_z_home]
 home_xy_position: 117.5, 117.5
@@ -220,362 +238,68 @@ z_hop_speed: 5.0
 #   When set to True, the X and Y axes are reset to their previous positions after Z axis homing.
 #   The default is False.
 
-[bltouch]
-sensor_pin: ^PB1
-control_pin: PB0
-x_offset: -41.9
-y_offset: -4.9
-z_offset: 0 # must be postiive number but we have negaive Z offset, run probe calibrate
-speed: 5.0
-sample_retract_dist: 8.0
-samples: 2
+######################################################################
+# Bed Leveling / Bed Mesh
+######################################################################
 
-[bed_screws]
-screw1: 70.5,37.5
-screw1_name: front left screw
-screw2: 200,37.5
-screw2_name: front right screw
-screw3: 200,207.5
-screw3_name: rear right screw
-screw4: 70.5,207.5
-screw4_name: rear left screw
-horizontal_move_z: 10
-
-[screws_tilt_adjust]
-screw1: 70.5,37.5
-screw1_name: front left screw
-screw2: 200,37.5
-screw2_name: front right screw
-screw3: 200,207.5
-screw3_name: rear right screw
-screw4: 70.5,207.5
-screw4_name: rear left screw
-horizontal_move_z: 10
-screw_thread: CW-M4
-
-[bed_mesh]
-speed: 100 # Speed (mm/s) of non-probing moves during calibration. The default is 50.
-mesh_min: 28, 29
-#   Defines minimum X, Y coordinate of the mesh for rectangular beds. Relative to the probe's
-#   location. Will be the first point probed, nearest to origin. Required for rectangular beds.
-mesh_max: 185, 205
-#   Defines maximum X, Y coordinate of the mesh for rectangular beds. Adheres to the same
-#   principle as mesh_min, however this will be the furthest point probed from the bed's origin.
-#   Required for rectangular beds.
-probe_count: 7,7
-#   For rectangular beds, this is a comma separate pair of integer values X, Y defining the number
-#   of points to probe along each axis. A single value is also valid, in which case that value will
-#   be applied to both axes. Default is 3, 3.
-algorithm: bicubic
-#   The interpolation algorithm to use. May be either "lagrange" or "bicubic". This option will not
-#   affect 3x3 grids, which are forced to use lagrange sampling. Default is lagrange.
-#### Uses Default / Not Used ####
-# horizontal_move_z: 5
-#   Height (mm) that head should be commanded to move to just prior to starting a probe operation.
-#   Default 5.
-# fade_start: 1.0
-#   Gcode Z position in which to start phasing out z-adjustment when fade is enabled. Default 1.0.
-# fade_end: 0.0
-#   Gcode Z position in which phasing out completes. When set to a value below fade_start, fade is
-#   disabled. Note that fade may add unwanted scaling along the z-axis of a print. If a user wishes
-#   to enable fade, a value of 10.0 is recommended. Default is 0.0, which disables fade.
-# fade_target:
-#   Z position in which fade should converge. When value is set to a non-zero value it must be
-#   within the range of z-values in the mesh. Users that wish to converge to the z homing position
-#   should set this to 0. Default is the average z value of the mesh.
-# split_delta_z: .025
-#   Amount of Z difference (mm) along a move that will trigger a split. Default is .025.
-# move_check_distance: 5.0
-#   Distance (mm) along a move to check for split_delta_z. This is also the minimum length that a
-#   move can be split. Default 5.0.
-# mesh_pps: 2, 2
-#   Comma separated pair of integers X, Y defining the number of points per segment to interpolate
-#   in the mesh along each axis. A "segment" can be defined as the space between each probed point.
-#   The user may enter a single value which will be applied to both axes. Default 2, 2.
-# bicubic_tension: .2
-#   When using the bicubic algorithm the tension parameter above may be applied to change the
-#   amount of slope interpolated. Larger numbers will increase the amount of slope, which results
-#   in more curvature in the mesh. Default .2.
-# zero_reference_position:
-#   Optional X,Y coordinate that specifies the location on the bed where Z = 0.  When specified
-#   the mesh will be offset so that zero Z adjustment occurs at this location.  The default is
-#   no zero reference.
-# faulty_region_1_min:
-# faulty_region_1_max:
-#   Optional points that define a faulty region.  See docs/Bed_Mesh.md for details on faulty
-#   regions.  Up to 99 faulty regions may be added. By default no faulty regions are set.
-# adaptive_margin:
-#   An optional margin (in mm) to be added around the bed area used by the defined print objects
-#   when generating an adaptive mesh.
-# scan_overshoot:
-#  The maximum amount of travel (in mm) available outside of the mesh. For rectangular beds this
-#  applies to travel on the X axis, and for round beds it applies to the entire radius.  The tool
-#  must be able to travel the amount specified outside of the mesh.  This value is used to
-#  optimize the travel path when performing a "rapid scan".  The minimum value that may be
-#  specified is 1.  The default is no overshoot.
+[include bed_leveling.cfg]
 
 ######################################################################
 # Filament Runout and Swap 
 ######################################################################
 
-[pause_resume]
-# recover_velocity: 50.0
-#   When capture/restore is enabled, speed at which to return to the captured position (mm/s).
-#   Default is 50.0 mm/s.
-
-[filament_motion_sensor filament_sensor]
-detection_length: 7
-#   The minimum length of filament pulled through the sensor to trigger a state change on the
-#   switch_pin. Default 7 mm.
-extruder: extruder # Name of extruder section this sensor is associated with. Required.
-pause_on_runout: True
-switch_pin: PA4 # Change to switch_pin name according to your motherboard
-runout_gcode:
-  G91
-  G1 Z20 F900
-  G90
-  G1 X210 Y210 F5000
-  G91
-  G1 E10 F300
-  G1 E20 F150
-  G1 E-20 F2400
-  G1 E-600 F1600
-  G90
-#   A list of G-Code commands to execute after a filament runout is detected. See
-#   docs/Command_Templates.md for G-Code format. If pause_on_runout is set to True this G-Code
-#   will run after the PAUSE is complete. The default is not to run any G-Code commands.
-insert_gcode:
-  G4 P90000
-  G91
-  G1 E60 F300
-  G4 P8000
-  resume
-#   A list of G-Code commands to execute after a filament insert is detected. See
-#   docs/Command_Templates.md for G-Code format. The default is not to run any G-Code commands,
-#   which disables insert detection.
-# event_delay:
-# pause_delay:
+[include filament_motion_sensor.cfg]
 
 ######################################################################
 # Resonance Compensation / Input Shaping
 ######################################################################
 
-#[input_shaper]
-#shaper_freq_x: 0
-#   A frequency (in Hz) of the input shaper for X axis. This is
-#   usually a resonance frequency of X axis that the input shaper
-#   should suppress. For more complex shapers, like 2- and 3-hump EI
-#   input shapers, this parameter can be set from different
-#   considerations. The default value is 0, which disables input
-#   shaping for X axis.
-#shaper_freq_y: 0
-#   A frequency (in Hz) of the input shaper for Y axis. This is
-#   usually a resonance frequency of Y axis that the input shaper
-#   should suppress. For more complex shapers, like 2- and 3-hump EI
-#   input shapers, this parameter can be set from different
-#   considerations. The default value is 0, which disables input
-#   shaping for Y axis.
-#shaper_type: mzv
-#   A type of the input shaper to use for both X and Y axes. Supported
-#   shapers are zv, mzv, zvd, ei, 2hump_ei, and 3hump_ei. The default
-#   is mzv input shaper.
-#shaper_type_x:
-#shaper_type_y:
-#   If shaper_type is not set, these two parameters can be used to
-#   configure different input shapers for X and Y axes. The same
-#   values are supported as for shaper_type parameter.
-#damping_ratio_x: 0.1
-#damping_ratio_y: 0.1
-#   Damping ratios of vibrations of X and Y axes used by input shapers
-#   to improve vibration suppression. Default value is 0.1 which is a
-#   good all-round value for most printers. In most circumstances this
-#   parameter requires no tuning and should not be changed.
-
 #    Accelerometer
-#[adxl345]
-#cs_pin:
-#   The SPI enable pin for the sensor. This parameter must be provided.
-#spi_speed: 5000000
-#   The SPI speed (in hz) to use when communicating with the chip.
-#   The default is 5000000.
-#spi_bus:
-#spi_software_sclk_pin:
-#spi_software_mosi_pin:
-#spi_software_miso_pin:
-#   See the "common SPI settings" section for a description of the
-#   above parameters.
-#axes_map: x, y, z
-#   The accelerometer axis for each of the printer's X, Y, and Z axes.
-#   This may be useful if the accelerometer is mounted in an
-#   orientation that does not match the printer orientation. For
-#   example, one could set this to "y, x, z" to swap the X and Y axes.
-#   It is also possible to negate an axis if the accelerometer
-#   direction is reversed (eg, "x, z, -y"). The default is "x, y, z".
-#rate: 3200
-#   Output data rate for ADXL345. ADXL345 supports the following data
-#   rates: 3200, 1600, 800, 400, 200, 100, 50, and 25. Note that it is
-#   not recommended to change this rate from the default 3200, and
-#   rates below 800 will considerably affect the quality of resonance
-#   measurements.
-
-#[resonance_tester]
-#probe_points:
-#   A list of X, Y, Z coordinates of points (one point per line) to test
-#   resonances at. At least one point is required. Make sure that all
-#   points with some safety margin in XY plane (~a few centimeters)
-#   are reachable by the toolhead.
-#accel_chip:
-#   A name of the accelerometer chip to use for measurements. If
-#   adxl345 chip was defined without an explicit name, this parameter
-#   can simply reference it as "accel_chip: adxl345", otherwise an
-#   explicit name must be supplied as well, e.g. "accel_chip: adxl345
-#   my_chip_name". Either this, or the next two parameters must be
-#   set.
-#accel_chip_x:
-#accel_chip_y:
-#   Names of the accelerometer chips to use for measurements for each
-#   of the axis. Can be useful, for instance, on bed slinger printer,
-#   if two separate accelerometers are mounted on the bed (for Y axis)
-#   and on the toolhead (for X axis). These parameters have the same
-#   format as 'accel_chip' parameter. Only 'accel_chip' or these two
-#   parameters must be provided.
-#max_smoothing:
-#   Maximum input shaper smoothing to allow for each axis during shaper
-#   auto-calibration (with 'SHAPER_CALIBRATE' command). By default no
-#   maximum smoothing is specified. Refer to Measuring_Resonances guide
-#   for more details on using this feature.
-#move_speed: 50
-#   The speed (in mm/s) to move the toolhead to and between test points
-#   during the calibration. The default is 50.
-#min_freq: 5
-#   Minimum frequency to test for resonances. The default is 5 Hz.
-#max_freq: 133.33
-#   Maximum frequency to test for resonances. The default is 133.33 Hz.
-#accel_per_hz: 60
-#   This parameter is used to determine which acceleration to use to
-#   test a specific frequency: accel = accel_per_hz * freq. Higher the
-#   value, the higher is the energy of the oscillations. Can be set to
-#   a lower than the default value if the resonances get too strong on
-#   the printer. However, lower values make measurements of
-#   high-frequency resonances less precise. The default value is 75
-#   (mm/sec).
-#hz_per_sec: 1
-#   Determines the speed of the test. When testing all frequencies in
-#   range [min_freq, max_freq], each second the frequency increases by
-#   hz_per_sec. Small values make the test slow, and the large values
-#   will decrease the precision of the test. The default value is 1.0
-#   (Hz/sec == sec^-2).
-#sweeping_accel: 400
-#   An acceleration of slow sweeping moves. The default is 400 mm/sec^2.
-#sweeping_period: 1.2
-#   A period of slow sweeping moves. Setting this parameter to 0
-#   disables slow sweeping moves. Avoid setting it to a too small
-#   non-zero value in order to not poison the measurements.
-#   The default is 1.2 sec which is a good all-round choice.
-
-
+[include bigtreetech-adxl345-v2.0.cfg]
+#    Config
+# [include input_shaper.cfg]
 
 ######################################################################
 # Macros
 ######################################################################
 
-[output_pin BEEPER_Pin]
-pin: PC6
-pwm: True
-value: 0
-shutdown_value: 0
-cycle_time: 0.001
-scale: 1
+[include macros.cfg]
 
-[gcode_macro M300]
-gcode:
-    {% set S = params.S|default(1000)|int %} ; S sets the tone frequency
-    {% set P = params.P|default(100)|int %} ; P sets the tone duration
-    {% set L = 0.5 %} ; L varies the PWM on time, close to 0 or 1 the tone gets a bit quieter. 0.5 is a symmetric waveform
-    {% if S <= 0 %} ; dont divide through zero
-    {% set F = 1 %}
-    {% set L = 0 %}
-    {% elif S >= 10000 %} ;max frequency set to 10kHz
-    {% set F = 0 %}
-    {% else %}
-    {% set F = 1/S %} ;convert frequency to seconds
-    {% endif %}
-    SET_PIN PIN=BEEPER_Pin VALUE={L} CYCLE_TIME={F} ;Play tone
-    G4 P{P} ;tone duration
-    SET_PIN PIN=BEEPER_Pin VALUE=0
-description: Macro M300
-
-[gcode_macro PAUSE]
-description: Pause the actual running print
-rename_existing: PAUSE_BASE
-# change this if you need more or less extrusion
-variable_extrude: 1.0
-gcode:
-  ##### read E from pause macro #####
-  {% set E = printer["gcode_macro PAUSE"].extrude|float %}
-  ##### set park positon for x and y #####
-  # default is your max posion from your printer.cfg
-  {% set x_park = printer.toolhead.axis_maximum.x|float - 5.0 %}
-  {% set y_park = printer.toolhead.axis_maximum.y|float - 5.0 %}
-  ##### calculate save lift position #####
-  {% set max_z = printer.toolhead.axis_maximum.z|float %}
-  {% set act_z = printer.toolhead.position.z|float %}
-  {% if act_z < (max_z - 2.0) %}
-      {% set z_safe = 2.0 %}
-  {% else %}
-      {% set z_safe = max_z - act_z %}
-  {% endif %}
-  ##### end of definitions #####
-  PAUSE_BASE
-  G91
-  {% if printer.extruder.can_extrude|lower == 'true' %}
-    G1 E-{E} F2100
-  {% else %}
-    {action_respond_info("Extruder not hot enough")}
-  {% endif %}
-  {% if "xyz" in printer.toolhead.homed_axes %}
-    G1 Z{z_safe} F900
-    G90
-    G1 X{x_park} Y{y_park} F6000
-  {% else %}
-    {action_respond_info("Printer not homed")}
-  {% endif %} 
-
-[gcode_macro RESUME]
-description: Resume the actual running print
-rename_existing: RESUME_BASE
-gcode:
-  ##### read E from pause macro #####
-  {% set E = printer["gcode_macro PAUSE"].extrude|float %}
-  #### get VELOCITY parameter if specified ####
-  {% if 'VELOCITY' in params|upper %}
-    {% set get_params = ('VELOCITY=' + params.VELOCITY)  %}
-  {%else %}
-    {% set get_params = "" %}
-  {% endif %}
-  ##### end of definitions #####
-  {% if printer.extruder.can_extrude|lower == 'true' %}
-    G91
-    G1 E{E} F2100
-  {% else %}
-    {action_respond_info("Extruder not hot enough")}
-  {% endif %}  
-  RESUME_BASE {get_params}
-
-[gcode_macro CANCEL_PRINT]
-description: Cancel the actual running print
-rename_existing: CANCEL_PRINT_BASE
-gcode:
-  TURN_OFF_HEATERS
-  CLEAR_PAUSE
-  CANCEL_PRINT_BASE
-
-[gcode_macro UNLOAD]
-# default_parameter_E: -320
-gcode:
-    G91
-    G1 E5.0 F1200
-    G1 E3.0 F1600
-    G1 E-13.14 F7000
-    G1 E{E} F3000
-    G90
+#*# <---------------------- SAVE_CONFIG ---------------------->
+#*# DO NOT EDIT THIS BLOCK OR BELOW. The contents are auto-generated.
+#*#
+#*# [heater_bed]
+#*# control = pid
+#*# pid_kp = 74.622
+#*# pid_ki = 1.849
+#*# pid_kd = 752.747
+#*#
+#*# [extruder]
+#*# control = pid
+#*# pid_kp = 21.674
+#*# pid_ki = 1.302
+#*# pid_kd = 90.217
+#*#
+#*# [bltouch]
+#*# z_offset = 3.330
+#*#
+#*# [bed_mesh default]
+#*# version = 1
+#*# points =
+#*# 	  0.027500, 0.010625, 0.024375, -0.018750, 0.019375, -0.038125, -0.035000
+#*# 	  0.053750, 0.033750, 0.051250, 0.005625, 0.036250, -0.003125, 0.006875
+#*# 	  0.002500, 0.000625, 0.024375, -0.010625, 0.016875, -0.003125, 0.005000
+#*# 	  -0.011875, -0.025000, 0.007500, -0.026875, -0.003750, -0.025000, -0.012500
+#*# 	  -0.003750, -0.020625, -0.008125, -0.035625, -0.015000, -0.031875, -0.016875
+#*# 	  -0.003750, -0.011875, 0.002500, -0.031875, -0.011875, -0.022500, -0.008125
+#*# 	  -0.006250, -0.024375, -0.001250, -0.023125, -0.002500, -0.012500, 0.006250
+#*# x_count = 7
+#*# y_count = 7
+#*# mesh_x_pps = 2
+#*# mesh_y_pps = 2
+#*# algo = bicubic
+#*# tension = 0.2
+#*# min_x = 10.0
+#*# max_x = 173.98
+#*# min_y = 18.0
+#*# max_y = 199.97999999999996
