--- a/firmware/config/moonraker/moonraker.conf
+++ b/firmware/config/moonraker/moonraker.conf
@@ -29,7 +29,7 @@ host: 0.0.0.0
 # ssl_port: 7130
 #   The port to listen on for SSL (HTTPS) connections.  Note that the HTTPS server will only be
 #   started of the certificate and key options outlined below are provided.  The default is 7130.
-klippy_uds_address: /home/shaggy/printer_data/comms/klippy.sock
+klippy_uds_address: ~/printer_data/comms/klippy.sock
 #   The address of Unix Domain Socket used to communicate with Klippy. This option accepts Jinja2
 #   Templates, where the configured data path is passed to the template context.
 #   Default is /tmp/klippy_uds.
